Fix header on mobile devices
Also disable its animation.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10076,14 +10076,6 @@ textarea:focus {
     -webkit-box-align: center;
     align-items: center;
 }
-.header {
-    -webkit-transition-property: height, padding, background-color, box-shadow;
-    transition-property: height, padding, background-color, box-shadow;
-    -webkit-transition-duration: 0.35s;
-    transition-duration: 0.35s;
-    -webkit-transition-timing-function: ease;
-    transition-timing-function: ease;
-}
 .header::before {
     position: absolute;
     left: 0;
@@ -10095,12 +10087,6 @@ textarea:focus {
     background-image: none;
     background-size: 100% 100%;
     background-position: 50% 100%;
-    -webkit-transition-property: opacity;
-    transition-property: opacity;
-    -webkit-transition-duration: 0.35s;
-    transition-duration: 0.35s;
-    -webkit-transition-timing-function: ease;
-    transition-timing-function: ease;
 }
 .header.collapse,
 .header.collapse:not(.show) {
